# DESC

./: pyproject.toml  setup.cfg
.benchmarks/Linux-CPython-3.9-64bit/: 0001_Latest_Commit.json  0001_master.json  0003_077d093de4c35cf2084c578a29302b595ae97338_20220217_012622.json  0003_077d093de4c35cf2084c578a29302b595ae97338_20220217_022848.json  0003_229b7bfd6a619e1f0e8ae45bbd6efe19fab1239d_20220217_010528.json  0003_5878fde06e93aa4d4e98f588179f15e14ba8c216_20220214_020609.json  0003_729b85f72867c550666d9b8f68c29b5dfe8ad98f_20220215_032611.json  0003_7bca879a74b242fc1b0cad5f8660395d560e738c_20220215_172610.json  0003_Latest_Commit.json  0003_ad22fad8f69b25865f1c84f592b5af0ca367de51_20220215_051008.json  0003_ad22fad8f69b25865f1c84f592b5af0ca367de51_20220215_145112.json  0003_b2fa719a51d56cbc9d35a8be1889a1eb4a008d2f_20220214_043345.json  0003_e5e694281d1f99c1c23b7dc8b96e88d13629c1c2_20220216_021348.json  0003_master.json
.github/workflows/: black.yml
devtools/: run_all_linting.sh  run_flake8_linting.sh  run_pylint.sh
tests/benchmarks/.benchmarks/Linux-CPython-3.9-64bit/: 0001_a5bc7bce6c55454abca6c79d9a2c8ffc35f2688a_20211107_204532.json
