[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = desc/_version.py
versionfile_build = desc/_version.py
tag_prefix = v
parentdir_prefix = desc-


[flake8]
ignore = 
max-line-length = 88
exclude = docs/*, examples/*
max-complexity = 10


# Coverage settings to control coverage.py
[coverage.run]
# we only care about the coverage of the source itself
# otherwise it measures coverage of the tests themselves as well
source = desc/

# _version.py is generated code, no need to count it
omit =
     desc/_version.py


[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:
ignore_errors = True